# python-project-52

./: Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: github-actions.yaml
apps/labels/: views.py
apps/labels/tests/: test_crud.py
apps/statuses/: views.py
apps/statuses/tests/: test_crud.py
apps/tasks/: filters.py  models.py
apps/tasks/templates/: delete.html  task_list.html
apps/tasks/tests/: test_crud.py
apps/users/: forms.py  models.py  views.py
apps/users/tests/: test_crud.py
labels/: urls.py  utils.py  views.py
labels/migrations/: 0005_alter_label_name.py
labels/templates/labels/: create.html  delete.html  list.html  update.html
statuses/: utils.py  views.py
statuses/templates/: status_create.html  status_delete.html  statuses_list.html
task_manager/: pytest.ini  settings.py  urls.py
task_manager/labels/: models.py  urls.py  utils.py  views.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/task_manager/: forms.py  models.py  settings.py  urls.py  utils.py  views.py
task_manager/tasks/: filters.py  models.py  urls.py  utils.py  views.py
task_manager/templates/: base.html  index.html
task_manager/users/: forms.py  models.py  urls.py  utils.py  views.py
tasks/: filters.py  models.py  views.py
tasks/migrations/: 0002_alter_task_name.py  0005_alter_task_description.py  0006_alter_task_executor.py
tasks/templates/: show.html  task_list.html
templates/: base.html
users/: forms.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_crud.py
(+49 files in other folders)
