[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-bootstrap5>=26.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "pytest-testcontainers-django>=0.2.4",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
]

[tool.pytest-testcontainers-django]
postgres_image = "postgres:16-alpine"
postgres_user = "test_user"
postgres_password = "test_password"
postgres_database = "test_db"
db_host_env_name = "DJANGO_DB_HOST"
db_port_env_name = "DJANGO_DB_PORT"
db_name_env_name = "DJANGO_DB_NAME"
db_user_env_name = "DJANGO_DB_USER"
db_password_env_name = "DJANGO_DB_PASSWORD"
